--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,8 @@
     <string name="title_activity_login">Sign in</string>
 
     <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
+    <string name="prompt_email">Email or Username</string>
+    <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">This email address is invalid</string>
@@ -15,4 +15,41 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+
+    <string name="network_error">network error</string>
+
+    <string name="code_unknown">unknown</string>
+    <string name="code_ok">OK</string>
+    <string name="code_param_invalid">param invalid</string>
+    <string name="code_username_invalid">username invalid</string>
+    <string name="code_password_invalid">password invalid</string>
+    <string name="code_email_invalid">email invalid</string>
+    <string name="code_mobile_invalid">mobile invalid</string>
+    <string name="code_file_too_large">file too large</string>
+    <string name="code_object_existed">object existed</string>
+    <string name="code_username_existed">username existed</string>
+    <string name="code_email_existed">email existed</string>
+    <string name="code_mobile_existed">mobile existed</string>
+    <string name="code_not_existed">not existed</string>
+    <string name="code_not_active">not active</string>
+    <string name="code_permission_denied">permission denied</string>
+    <string name="code_account_abnormal">account abnormal</string>
+    <string name="code_frozen">frozen</string>
+    <string name="code_token_expire">token expire</string>
+    <string name="code_token_invalid">token invalid</string>
+    <string name="code_send_email_failed">send email failed</string>
+    <string name="code_captcha_invalid">captcha invalid</string>
+    <string name="code_page_invalid">page invalid</string>
+    <string name="code_sys_error">sys error</string>
+    <string name="code_db_error">db error</string>
+    <string name="code_up_to_limit">up to limit</string>
+    <string name="code_service_not_available">service not available</string>
+    <string name="title_activity_main2">Main2Activity</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="title_activity_main">MainActivity</string>
+
 </resources>
+
+
